spring-boot-istio-prometheus-grafana/k8s/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: demo
spec:
  selector:
    app: service-b
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
