spring-boot-istio-prometheus-grafana/k8s/grafana-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - "grafana.sumangcodes.info"  # Dedicated hostname for Grafana
  gateways:
    - monitoring-gateway
  http:
    - route:
        - destination:
            host: grafana
            port:
              number: 3000  # Default port for Grafana
