spring-boot-istio-prometheus-grafana/k8s/service-a-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a-virtualservice
  namespace: demo
spec:
  hosts:
    - "service-a.sumangcodes.info"  # Use a dedicated hostname
  gateways:
    - my-gateway
  http:
    - route:
        - destination:
            host: service-a.demo.svc.cluster.local
            port:
              number: 8080
